Added a notification class

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,11 +42,11 @@
         app:counterEnabled="true"
         app:counterMaxLength="15"
         app:counterTextAppearance="@style/HelperTextAppearance"
-        app:counterTextColor="#3F51B5"
+        app:counterTextColor="@color/black"
         app:helperText="@string/helper_text_login"
         app:helperTextEnabled="true"
         app:helperTextTextAppearance="@style/HelperTextAppearance"
-        app:helperTextTextColor="#3F51B5"
+        app:helperTextTextColor="@color/black"
         app:hintAnimationEnabled="true"
         app:hintEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
