--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     >
 <RelativeLayout
+    android:layout_alignParentStart="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/message_shape"
