--- a/app/src/main/res/layout/sticker_recycler_view_item.xml
+++ b/app/src/main/res/layout/sticker_recycler_view_item.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10sp"
+    android:layout_marginStart="10sp"
+    android:layout_marginEnd="10sp"
     >
 
     <TextView
@@ -17,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <pl.droidsonroids.gif.GifImageView
+        android:background="?selectableItemBackground"
         android:id="@+id/sticker_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
