Integrate sticker pane and floating action button
Change text to image for stickers

--- a/app/src/main/res/layout/chat_row.xml
+++ b/app/src/main/res/layout/chat_row.xml
@@ -30,15 +30,12 @@
                     android:text="Michael Jordan"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
-                <TextView
-                    android:id="@+id/chat_text_sticker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="✅"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                    android:textColor="@color/black" />
-
+                <pl.droidsonroids.gif.GifImageView
+                    android:id="@+id/chat_sticker"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#fff"
+                    android:src="@drawable/sticker1" />
 
             </LinearLayout>
             <TextView
