--- a/app/src/main/res/drawable/receive_message_shape.xml
+++ b/app/src/main/res/drawable/receive_message_shape.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:padding="10dp">
+    <stroke android:width="5dp" android:color="#8BC34A"/>
 
-    <solid android:color="#00BCD4" />
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
