Login activity: User name, Login button, Signup button Signup activity: Email Username App icon App name: Puddle V1 Chat Room :Margin at the bottom, Bigger gif images Action bar: Contrast -> change to white text ChatHistory: Smaller gifs

--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -16,8 +16,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_room_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" />
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="10dp" />
 
 
     <LinearLayout
