--- a/app/src/main/res/layout/chat_row.xml
+++ b/app/src/main/res/layout/chat_row.xml
@@ -28,12 +28,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Michael Jordan"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                   />
 
                 <pl.droidsonroids.gif.GifImageView
                     android:id="@+id/chat_sticker"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="#fff"
                     android:src="@drawable/sticker1" />
 
@@ -45,6 +48,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Jun 2 Sun"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
                 android:textAlignment="viewEnd"/>
 
         </LinearLayout>
