--- a/app/src/main/res/layout/sticker_recycler_view_item.xml
+++ b/app/src/main/res/layout/sticker_recycler_view_item.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="10sp"
-    android:layout_marginEnd="10sp"
+    android:padding="15sp"
     >
-
     <TextView
+        android:layout_margin="8sp"
         android:id="@+id/sticker_count_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:textColor="@color/purple_500"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <pl.droidsonroids.gif.GifImageView
         android:background="?selectableItemBackground"
         android:id="@+id/sticker_image"
@@ -27,6 +24,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-       />
-
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
