--- a/app/src/main/res/layout/sticker_layout.xml
+++ b/app/src/main/res/layout/sticker_layout.xml
@@ -25,9 +25,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/sticker_recycler_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_stickers" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
